  * added extras/win32/raggle.nsi (nullsoft installer script)
  * added extras/win32/raggle_client.html (client redirect)
  * added extras/win32/raggle_server.bat (server batch file)
  * added extras/win32/win32.html (windows documentation)

* Thu Sep 04 02:31:04 2003, pabs <pabs@pablotron.org>
  * BUGS: add feed errors reported by karl d'adamo

* Thu Sep 04 11:18:47 2003, pabs <pabs@pablotron.org>
  * TODO: added a great way to debug the feed grabbing thread!

* Thu Sep 04 12:28:05 2003, pabs <pabs@pablotron.org>
  * BUGS: add bugs for windows build

* Fri Sep 05 01:52:00 2003, heap <vaine@cs.helsinki.fi>
  * extras/test_html_renderer.rb: fixed failing 
    #test_links_are_rendered_offline.

* Fri Sep 05 07:18:14 2003, pabs <pabs@pablotron.org>
  * raggle: fix bugs reported by karl d'adamo
  * raggle: handle HTTP 204 response properly
  * raggle: fix a nil dereference in fix_character_encoding()
  * raggle: handle host-relative, relative path HTTP redirects properly
  * raggle: added $config['strip_external_entities'] (work-around for
    broken REXML 2.7.1 external entity behavior)
  * raggle: don't buffer feed log output
  * raggle: wrap feed grabbing in begin/rescue pair

* Fri Sep 05 17:58:06 2003, pabs <pabs@pablotron.org>
  * extras/web_ui/inc/item.html: ITEM_ID => INDEX

* Mon Sep 08 12:12:06 2003, pabs <pabs@pablotron.org>
  * raggle: nicer comments in get_http_url()
  * raggle: only call http.finish if it's been started

* Mon Sep 08 15:17:59 2003, pabs <pabs@pablotron.org>
  * BUGS: add a few new things that have beenr eported

* Mon Sep 08 15:23:26 2003, pabs <pabs@pablotron.org>
  * BUGS: attribute report to reporter :D

* Mon Sep  8 20:43:02 2003, richlowe <richlowe@richlowe.net>
  * raggle: Kill describe_feed, it's not used anymore.

* Mon Sep  8 21:10:13 2003, richlowe <richlowe@richlowe.net>
  * raggle: Update the link to my RSS feed.

* Tue Sep 09 01:14:19 2003, pabs <pabs@pablotron.org>
  * raggle: fix OPML import