@@ -25,10 +25,10 @@
 
   <body bgcolor="#eeeeee">
     <a target='feed' href=''
-      onClick='javascript:addFeed(); return false;'>Add</a> |
-    <a target='feed' href='/raggle/feed/?mode=invalidate_all'>Reload</a> |
-    <a target='feed' href='/raggle/feed/?mode=sort'>Sort</a><br />
-    <a target='feed' href='/raggle/feed'>Refresh Window</a> |
+      onClick='javascript:addFeed(); return false;'>Add Feed</a> |
+    <a target='feed'
+      href='/raggle/feed/?mode=invalidate_all'>Reload Feeds</a> |
+    <a target='feed' href='/raggle/feed/?mode=sort'>Sort Feeds</a> |
     <a target='feed' href='/raggle/feed/?mode=save_feed_list'>Save Feeds</a>
   </body>
 </html>
