@@ -8,13 +8,10 @@
     <base target='_new' />
   </head>
 
-  <frameset rows='40,*' border='1'>
-    <frame name='status' src='/titlebar.html' scrolling='no' />
+  <frameset rows='30,*' border='1'>
+    <frame name='titlebar' src='/titlebar.html' scrolling='no' />
     <frameset cols='25%,*'>
-      <frameset rows='*,32'>
-        <frame name='feed' src='/raggle/feed' scrolling='yes' />
-        <frame name='feedopts' src='/feedopts.html' scrolling='no' />
-      </frameset>
+      <frame name='feed' src='/raggle/feed' scrolling='yes' />
       <frameset rows='40%,*'>
         <frame name='item' src='/raggle/item' scrolling='auto' />
         <frame name='desc' src='/raggle/desc' scrolling='auto' />
