@@ -1,18 +1,35 @@
 <html>
   <head>
-    <title>Raggle: Header</title>
+    <title>Raggle</title>
     <meta name='author'         content='Raggle' />
-    <meta name='description'    content='Raggle Feed List' />
+    <meta name='description'    content='Raggle Titlebar' />
     <meta name='keywords'       content='rss channels feeds' />
 
     <link title='default' href='/inc/titlebar.css'
       rel='stylesheet' type='text/css' />
   </head>
 
-  <body bgcolor="#eeeeee">
+  <!--body bgcolor="#eeeeee">
     <div id='titlebar'>
       <a class='titlebar-link' target='raggle-article'
          href='http://www.raggle.org/'>Raggle</a>
-    </div>
+    </div-->
+  <script language='javascript'>
+    <!--
+    function addFeed() {
+      url = prompt('Please enter the Feed URL.', 'http://');
+      if (url && url != '')
+        parent.feed.location.href = '/raggle/feed/?mode=add&url=' + url;
+    }
+    // -->
+  </script>
+
+  <body bgcolor="#eeeeee">
+    <a target='feed' href=''
+      onClick='javascript:addFeed(); return false;'>Add Feed</a> |
+    <a target='feed'
+      href='/raggle/feed/?mode=invalidate_all'>Reload Feeds</a> |
+    <a target='feed' href='/raggle/feed/?mode=sort'>Sort Feeds</a> |
+    <a target='feed' href='/raggle/feed/?mode=save_feed_list'>Save Feeds</a>
   </body>
 </html>
